--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-intimate, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-intimate, more-social, motorised-watersports, glass-bottom-boat, caribbean-food, teppanyaki, french, italian, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
@@ -346,7 +346,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Adventure",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-tranquil, glass-bottom-boat, caribbean-food, indian, french, italian, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Caribbean/1 - Carousel_ResortHero_Slider/Sandals-Royal-Caribbean-Offshore-Island.jpg",
     "Beaches": "images/Sandals Royal Caribbean/4 - Beaches/Sandals-SRC-BeachAerial-7.jpg",
     "Pool": "images/Sandals Royal Caribbean/3 - Pools/Sandals-Royal-Caribbean-Swim-ups.jpg",
@@ -362,7 +362,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-intimate, long-stretch, scuba-on-property, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, italian, long-stretch, scuba-on-property, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Negril/1 - Carousel_ResortHero_Slider/Sandals-Negril-Aerial.jpg",
     "Beaches": "images/Sandals Negril/4 - Beaches/Sandals-Negril-Aerial.jpg",
     "Pool": "images/Sandals Negril/3 - Pools/Sandals-Negril-Pool.jpg",
@@ -378,7 +378,7 @@
     "IdealFor": "Golf Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-expansive, scuba-on-property, golf, glass-bottom-boat, tennis, pickle-ball, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, cove-beach, more-expansive, more-social, french, italian, scuba-on-property, golf, glass-bottom-boat, tennis, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Ochi/1 - Carousel_ResortHero_Slider/Sandals-Ochi-Main-Pool.jpg",
     "Beaches": "images/Sandals Ochi/4 - Beaches/Sandals-Ochi-Beach.jpg",
     "Pool": "images/Sandals Ochi/3 - Pools/Sandals-Ochi-Great-House-Village.jpg",
@@ -394,7 +394,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, more-intimate, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, golf, caribbean-food, french, italian, more-intimate, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "",
     "Pool": "",
@@ -410,7 +410,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Food and Wine Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, glass-bottom-boat, french, italian, more-social, more-expansive, scuba-on-property, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "images/Sandals Royal Plantation/4 - Beaches/SRP_Beach_Detail.jpg",
     "Pool": "images/Sandals Royal Plantation/3 - Pools/croissantsandcaviar_sandalsroyalplantation-4.jpg",
@@ -427,7 +427,7 @@
     "IdealFor": "Adventure Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, rondoval-suite, swim up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, cove-beach, more-social, motorised-watersports, glass-bottom-boat, tennis, caribbean-food, sushi, french, italian, more-expansive, scuba-on-property, rondoval-suite, swim-up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Dunn's River/1 - Carousel_ResortHero_Slider/Sandals_Dunns_River_Beach.jpg",
     "Beaches": "images/Sandals Dunn's River/4 - Beaches/Sandals_Dunns_River_Beach.jpg",
     "Pool": "images/Sandals Dunn's River/3 - Pools/Sandals_Dunns_River_Pool_Whirlpool.jpg",
@@ -443,7 +443,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-intimate, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-expansive, motorised-watersport, pickle-ball, caribbean-food, steakhouse, french, italian, more-social, more-intimate, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -459,7 +459,7 @@
     "IdealFor": "Dive Lover",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Nature Lovers",
-    "Tags": "adults-only, more-expansive, scuba-on-property, swim-up-suite, tennis, british-pub, sushi, teppanyaki, steakhouse, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-tranquil, more-intimate, glass-bottom-boat, french, italian, scuba-on-property, swim-up-suite, tennis, british-pub, sushi, teppanyaki, steakhouse, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Grenada/1 - Carousel_ResortHero_Slider/GRENEDA_SANDALS_DISKIN-161.jpg",
     "Beaches": "images/Sandals Grenada/4 - Beaches/Sandals-Grenada-02-2022-Beaches 2-5156.jpg",
     "Pool": "images/Sandals Grenada/3 - Pools/GRENEDA_SANDALS_DISKIN-161.1.jpg",
@@ -475,7 +475,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, jerk-shack, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
+    "Tags": "long-stretch, more-expansive, bowling, more-social, bowling, caribbean-food, indian, french, italian, adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, jerk-shack, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Barbados/1 - Carousel_ResortHero_Slider/IMG_9234.jpg",
     "Beaches": "images/Sandals Barbados/5 - Dining & Bars/SBR_TIKI_BEACH_BAR_0290.jpg",
     "Pool": "",
@@ -491,7 +491,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Dive Lovers",
-    "Tags": "adults-only, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, long-stretch, more-social, bowling, caribbean-food, sushi, teppanyaki, indian, french, italian, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Barbados/1 - Carousel_ResortHero_Slider/SBR_SAINT_LAWRENCE_HOUSE_EXT_MAGIC_072.jpg",
     "Beaches": "images/Sandals Royal Barbados/4 - Beaches/SBR_MAIN_POOL_DRONE_0113.jpg",
     "Pool": "images/Sandals Royal Barbados/3 - Pools/SBR_MAIN_POOL_DRONE_0053.jpg",
@@ -507,7 +507,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-intimate, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
+    "Tags": "adults-only, more-tranquil, long-stretch, italian, more-intimate, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Sandals Halcyon Beach/1 - Carousel_ResortHero_Slider/SHC Drone.jpg",
     "Beaches": "images/Sandals Halcyon Beach/4 - Beaches/SHC Drone.jpg",
     "Pool": "",
@@ -523,7 +523,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, golf, more-tranquil, teppanyaki, british-pub, long-stretch, more-expansive, swim-up-suite, rondoval-villa, sushi,",
+    "Tags": "adults-only, cove-beach, more-social, golf, french, italian, teppanyaki, british-pub, long-stretch, more-expansive, swim-up-suite, rondoval-villa, sushi,",
     "Images": "images/Sandals Regency La Toc/1 - Carousel_ResortHero_Slider/SLU Drone 3.jpg",
     "Beaches": "images/Sandals Regency La Toc/4 - Beaches/SLU Drone 4-2.jpg",
     "Pool": "images/Sandals Regency La Toc/3 - Pools/SLU Drone 1.jpg",
@@ -539,7 +539,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-tranquil, more-expansive, scuba, long-stretch-of-beach, golf, over-the-water-villas, rondoval villa, swim-up-suite, tennis, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, motorised-watersports, indian, french, italian, long-stretch-of-beach, golf, over-the-water-villas, rondoval villa, swim-up-suite, tennis, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport",
     "Images": "images/Sandals Grande St. Lucian/1 - Carousel_ResortHero_Slider/DJI_0091.jpg",
     "Beaches": "images/Sandals Grande St. Lucian/4 - Beaches/SGL Lifestyle Drone.jpg",
     "Pool": "images/Sandals Grande St. Lucian/3 - Pools/DJI_0874.jpg",
@@ -555,7 +555,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
+    "Tags": "adults-only, cove-beach, golf, caribbean-food, french, italian, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
     "Images": "images/Sandals Royal Curacao/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalcuracao_resort-8.jpg",
     "Beaches": "images/Sandals Royal Curacao/4 - Beaches/untitled-194(B).jpg",
     "Pool": "images/Sandals Royal Curacao/3 - Pools/untitled-185.jpg",
@@ -571,7 +571,7 @@
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
+    "Tags": "long-stretch, more-intimate, adults-only, more-intimate, scuba-on-property, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
     "Pool": "images/Sandals Grande Antigua/3 - Pools/7H6A7577.jpg",
@@ -587,7 +587,7 @@
     "IdealFor": "",
     "IdealFor2": "Dive Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, more-tranquil, more-expansive, cove-beach, scuba-on-property, tennis, overwater-villas, swim-up-suites, steakhouse, sushi, jerk-shack, distance-to-airport-less-than-45-minutes\n",
+    "Tags": "adults-only, more-social, pickle-ball, italian, more-tranquil, more-expansive, cove-beach, scuba-on-property, tennis, overwater-villas, swim-up-suites, steakhouse, sushi, jerk-shack, distance-to-airport-less-than-45-minutes\n",
     "Images": "images/Sandals Saint Vincent/1 - Carousel_ResortHero_Slider/Sandals-Saint-Vincent-aerial-beach.jpg",
     "Beaches": "images/Sandals Saint Vincent/4 - Beaches/Sandals-Saint-Vincent-beach.jpg",
     "Pool": "images/Sandals Saint Vincent/3 - Pools/Sandals-Saint-Vincent-Heart-Shape-Pool.jpg",
@@ -603,7 +603,7 @@
     "IdealFor": "Family Fun. ",
     "IdealFor2": "Watersports",
     "IdealFor3": "Golf Lovers",
-    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, motorized-watersports, tennis, golf, cove-beach, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, glass-bottom-boat, caribbean-food, more-social, more-expansive, scuba-on-property, motorized-watersports, tennis, golf, cove-beach, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Ocho Rios/1 - Carousel_ResortHero_Slider/BBO_Beach.jpg",
     "Beaches": "images/Beaches Ocho Rios/4 - Beaches/BBO_Beach_2_Drone_.jpg",
     "Pool": "images/Beaches Ocho Rios/3 - Pools/BBO_Pool_Bar.jpg",
@@ -619,7 +619,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Beach Lover",
-    "Tags": "families-with-kids, more-social, more-expansive, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean-food, more-expansive, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
@@ -635,7 +635,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Dive Lovers",
-    "Tags": "families-with-kids, more-social, cove-beach, more-expansive, motorized-watersports, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
+    "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean-food, indian, french, jerk-shack, italian, more-social, cove-beach, more-expansive, motorized-watersports, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
     "Beaches": "images/Beaches Turks and Caicos/4 - Beaches/DJI_20240120093216_0798_D-Edit.jpg",
     "Pool": "images/Beaches Turks and Caicos/3 - Pools/BTC_ITALIAN_POOL20-6-963-Edit.jpg",
