--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
   {
     "ResortTitle": "Sandals Royal Bahamian",
     "Island": "Bahamas",
-    "ResortDescription": "The Bahamas’ most elegant resort \nFeaturing its own private offshore island\nEasy access to the Blue Lagoon dolphin swim\nRolls Royce private transfers for top-tier suites \nOver 10,000 sq. ft of freshwater pools \nPADI-Certified SCUBA diving and equipment\n10 restaurants and 8 bars\nEasy access to Nassau for shopping, tours, and casinos \nClose proximity to Miami \nFitness Center and Red Lane Spa",
+    "ResortDescription": "Re-imagined Beachfront Resort with a private offshore island, Sandals Barefoot Cay including two more beaches to explore, ideal for relaxing and snorkeling \nQuick 15min drive from Lynden Pindling International Airport\nEasy access to duty-free shopping, tours and casinos in Downtown Nassau  \nAll-new Coconut Grove lounge area with food trucks, bar and nightly entertainment \nOffers Island Inclusive, an off-site dining program created to experience local restaurants\nComplimentary MINI Cooper for guests in select suites to explore Nassau \n12 Unique Dining Experiences and 8 Bars\nFitness Center and three Red Lane® Spa locations\n7 Freshwater Pools and 3 Whirlpool \nRolls Royce private transfers for top-tier suites \n",
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
@@ -519,7 +519,7 @@
   {
     "ResortTitle": "Sandals Regency La Toc",
     "Island": "Saint Lucia",
-    "ResortDescription": "Known as the “Emerald of the Caribbean” with sparkling emerald waters\nSet on a 220-acre estate known for its lush, tropical scenery\nHalf-mile, crescent-shaped beach off a sloping hillside\nStay at 1, play at 3 – full exchange privileges at the other Sandals resorts\nSunset Bluff Suites offer 180-degree views, private infinity pool and whirlpool \nComplimentary green fees and access to Cap Estate Golf & Country Club\n9-holes located directly on the resort at Sandals Regency La Toc Golf course\nPADI-Certified SCUBA diving and equipment, world famous reefs and wrecks \n9 Unique Dining Experiences and 8 Bars\n3 Freshwater Pool and 4 Whirlpools\n",
+    "ResortDescription": "Known as the “Emerald of the Caribbean” with sparkling emerald waters\nSet on a 220-acre estate known for its lush, tropical scenery\nHalf-mile, crescent-shaped beach off a sloping hillside\nStay at 1, play at 3 – full exchange privileges at the other Sandals resorts\nSunset Bluff Suites offer 180-degree views, private infinity pool and whirlpool \nComplimentary green fees and access to Cap Estate Golf & Country Club\n9-holes located directly on the resort at Sandals Regency La Toc Golf course\nPADI-Certified SCUBA diving and equipment, world famous reefs and wrecks \n9 Unique Dining Experiences and 8 Bars\n3 Freshwater Pools and 4 Whirlpools\n",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Golf Lovers",
