--- a/index.html
+++ b/index.html
@@ -290,7 +290,16 @@
           <h4 class="heading-3 tag-text">Teppanyaki</h4>
         </div>
         <div class="tag">
-          <h4 class="heading-3 tag-text">Rum Club</h4>
+          <h4 class="heading-3 tag-text">French</h4>
+        </div>
+        <div class="tag">
+          <h4 class="heading-3 tag-text">Italian</h4>
+        </div>
+        <div class="tag">
+          <h4 class="heading-3 tag-text">Caribbean Food</h4>
+        </div>
+        <div class="tag">
+          <h4 class="heading-3 tag-text">Indian</h4>
         </div>
       </div>
       <!-- <div class="tag-wrapper">
