--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
           <h4 class="heading-3 tag-text">More Tranquil</h4>
         </div>
         <div class="tag">
+          <h4 class="heading-3 tag-text">More Intimate</h4>
+        </div>
+        <div class="tag">
           <h4 class="heading-3 tag-text">More Social</h4>
         </div>
         <div class="tag">
