--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <div class="resort-description">
           <h2>{{ResortTitle}}</h2>
+          <h2 class="island-name">{{Island}}</h2>
 
           <ul class="resort-description-list">
             {{ResortDescription}}
