--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-intimate, more-social, motorised-watersports, glass-bottom-boat, caribbean-food, teppanyaki, french, italian, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, motorized-watersports, glass-bottom-boat, caribbean-food, teppanyaki, french, italian, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
@@ -359,7 +359,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Adventure",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, cove-beach, more-tranquil, glass-bottom-boat, caribbean-food, indian, french, italian, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-tranquil, glass-bottom-boat, caribbean-food, indian, french, italian, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Caribbean/1 - Carousel_ResortHero_Slider/Sandals-Royal-Caribbean-Offshore-Island.jpg",
     "Beaches": "images/Sandals Royal Caribbean/4 - Beaches/Sandals-SRC-BeachAerial-7.jpg",
     "Pool": "images/Sandals Royal Caribbean/3 - Pools/Sandals-Royal-Caribbean-Swim-ups.jpg",
@@ -423,7 +423,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Food and Wine Lovers",
-    "Tags": "adults-only, more-tranquil, glass-bottom-boat, french, italian, more-social, more-expansive, scuba-on-property, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, glass-bottom-boat, french, italian, more-social, more-expansive, scuba-on-property, caribbean-food, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "images/Sandals Royal Plantation/4 - Beaches/SRP_Beach_Detail.jpg",
     "Pool": "images/Sandals Royal Plantation/3 - Pools/croissantsandcaviar_sandalsroyalplantation-4.jpg",
@@ -440,7 +440,7 @@
     "IdealFor": "Adventure Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, cove-beach, more-social, motorised-watersports, glass-bottom-boat, tennis, caribbean-food, sushi, french, italian, more-expansive, scuba-on-property, rondoval-suite, swim-up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, cove-beach, more-social, motorized-watersports, glass-bottom-boat, tennis, caribbean-food, sushi, french, italian, more-expansive, scuba-on-property, rondoval-suite, swim-up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Dunn's River/1 - Carousel_ResortHero_Slider/Sandals_Dunns_River_Beach.jpg",
     "Beaches": "images/Sandals Dunn's River/4 - Beaches/Sandals_Dunns_River_Beach.jpg",
     "Pool": "images/Sandals Dunn's River/3 - Pools/Sandals_Dunns_River_Pool_Whirlpool.jpg",
@@ -456,7 +456,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, cove-beach, more-expansive, motorised-watersport, pickle-ball, caribbean-food, steakhouse, french, italian, more-social, more-intimate, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-expansive, motorised-watersport, pickle-ball, caribbean-food, steakhouse, french, italian, more-social, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -488,7 +488,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "long-stretch, more-expansive, bowling, more-social, bowling, caribbean-food, indian, french, italian, adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, jerk-shack, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
+    "Tags": "long-stretch, more-expansive, bowling, more-social, bowling, caribbean-food, indian, french, italian, adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Barbados/1 - Carousel_ResortHero_Slider/IMG_9234.jpg",
     "Beaches": "images/Sandals Barbados/5 - Dining & Bars/SBR_TIKI_BEACH_BAR_0290.jpg",
     "Pool": "",
@@ -504,7 +504,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Dive Lovers",
-    "Tags": "adults-only, long-stretch, more-social, bowling, caribbean-food, sushi, teppanyaki, indian, french, italian, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, long-stretch, more-social, bowling, caribbean-food, sushi, teppanyaki, indian, french, italian, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, glass-bottom-boat, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Barbados/1 - Carousel_ResortHero_Slider/SBR_SAINT_LAWRENCE_HOUSE_EXT_MAGIC_072.jpg",
     "Beaches": "images/Sandals Royal Barbados/4 - Beaches/SBR_MAIN_POOL_DRONE_0113.jpg",
     "Pool": "images/Sandals Royal Barbados/3 - Pools/SBR_MAIN_POOL_DRONE_0053.jpg",
@@ -520,7 +520,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-tranquil, long-stretch, italian, more-intimate, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
+    "Tags": "adults-only, more-tranquil, long-stretch, italian, more-intimate, golf, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Sandals Halcyon Beach/1 - Carousel_ResortHero_Slider/SHC Drone.jpg",
     "Beaches": "images/Sandals Halcyon Beach/4 - Beaches/SHC Drone.jpg",
     "Pool": "",
@@ -536,7 +536,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, cove-beach, more-social, golf, french, italian, teppanyaki, british-pub, long-stretch, more-expansive, swim-up-suite, rondoval-villa, sushi,",
+    "Tags": "adults-only, cove-beach, more-social, golf, french, italian, teppanyaki, british-pub, more-expansive, swim-up-suite, rondoval-villa, sushi,",
     "Images": "images/Sandals Regency La Toc/1 - Carousel_ResortHero_Slider/SLU Drone 3.jpg",
     "Beaches": "images/Sandals Regency La Toc/4 - Beaches/SLU Drone 4-2.jpg",
     "Pool": "images/Sandals Regency La Toc/3 - Pools/SLU Drone 1.jpg",
@@ -552,7 +552,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, motorised-watersports, indian, french, italian, long-stretch-of-beach, golf, over-the-water-villas, rondoval villa, swim-up-suite, tennis, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, motorized-watersports, indian, french, italian, long-stretch-of-beach, golf, over-the-water-villas, rondoval villa, swim-up-suite, tennis, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport",
     "Images": "images/Sandals Grande St. Lucian/1 - Carousel_ResortHero_Slider/DJI_0091.jpg",
     "Beaches": "images/Sandals Grande St. Lucian/4 - Beaches/SGL Lifestyle Drone.jpg",
     "Pool": "images/Sandals Grande St. Lucian/3 - Pools/DJI_0874.jpg",
@@ -568,7 +568,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, cove-beach, golf, caribbean-food, french, italian, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
+    "Tags": "adults-only, cove-beach, golf, caribbean-food, french, italian, more-expansive, more-social, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
     "Images": "images/Sandals Royal Curacao/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalcuracao_resort-8.jpg",
     "Beaches": "images/Sandals Royal Curacao/4 - Beaches/untitled-194(B).jpg",
     "Pool": "images/Sandals Royal Curacao/3 - Pools/untitled-185.jpg",
@@ -584,7 +584,7 @@
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "long-stretch, more-intimate, adults-only, more-intimate, scuba-on-property, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
+    "Tags": "long-stretch, more-intimate, adults-only, more-intimate, scuba-on-property, tennis, rondoval-villa, british-pub",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
     "Pool": "images/Sandals Grande Antigua/3 - Pools/7H6A7577.jpg",
@@ -600,7 +600,7 @@
     "IdealFor": "",
     "IdealFor2": "Dive Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, more-social, pickle-ball, italian, more-tranquil, more-expansive, cove-beach, scuba-on-property, tennis, overwater-villas, swim-up-suites, steakhouse, sushi, jerk-shack, distance-to-airport-less-than-45-minutes\n",
+    "Tags": "adults-only, more-social, pickle-ball, italian, more-expansive, cove-beach, scuba-on-property, tennis, overwater-villas, swim-up-suites, steakhouse, sushi, jerk-shack, distance-to-airport-less-than-45-minutes\n",
     "Images": "images/Sandals Saint Vincent/1 - Carousel_ResortHero_Slider/Sandals-Saint-Vincent-aerial-beach.jpg",
     "Beaches": "images/Sandals Saint Vincent/4 - Beaches/Sandals-Saint-Vincent-beach.jpg",
     "Pool": "images/Sandals Saint Vincent/3 - Pools/Sandals-Saint-Vincent-Heart-Shape-Pool.jpg",
@@ -616,7 +616,7 @@
     "IdealFor": "Family Fun. ",
     "IdealFor2": "Watersports",
     "IdealFor3": "Golf Lovers",
-    "Tags": "families-with-kids, glass-bottom-boat, caribbean-food, more-social, more-expansive, scuba-on-property, motorized-watersports, tennis, golf, cove-beach, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, glass-bottom-boat, more-tranquil, scuba-on-property, tennis, french, golf, cove-beach, italian, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Ocho Rios/1 - Carousel_ResortHero_Slider/BBO_Beach.jpg",
     "Beaches": "images/Beaches Ocho Rios/4 - Beaches/BBO_Beach_2_Drone_.jpg",
     "Pool": "images/Beaches Ocho Rios/3 - Pools/BBO_Pool_Bar.jpg",
@@ -632,7 +632,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Beach Lover",
-    "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean-food, more-expansive, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean-food, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
@@ -648,7 +648,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Dive Lovers",
-    "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean-food, indian, french, jerk-shack, italian, more-social, cove-beach, more-expansive, motorized-watersports, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
+    "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean-food, indian, french, jerk-shack, italian, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
     "Beaches": "images/Beaches Turks and Caicos/4 - Beaches/DJI_20240120093216_0798_D-Edit.jpg",
     "Pool": "images/Beaches Turks and Caicos/3 - Pools/BTC_ITALIAN_POOL20-6-963-Edit.jpg",
