--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <div data-id="island" class="tab">Island Tours</div> -->
         </div>
         <div class="resort-images suggested active">
-          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
-          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
           <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
           <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
           <!-- <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
