--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </div>
       <div class="filters-title">
         <div class="filters-title-wrapper">
-          <h1 class="heading-2">Build Your IDEAL VACATION</h1>
-          <h4 class="heading-3">Select Your Guest Profile and any ONE Priority Activity</h4>
+          <h1 class="heading-2">Build Your Dream Vacation</h1>
+          <h4 class="heading-3">Select Your Guest Profile and <span class="white">Up To Three</span> Additional Preferences, </br>Then Press the Submit Preferences Button to Explore Your Recommended Resort Options</h4>
           <div class="tag-breadcrumb">
 
           </div>
@@ -187,7 +187,7 @@
         </div>
       </div>
       <div class="tag-wrapper">
-        <h4 class="heading-3 tag-title">GUEST PROFILE</h4>
+        <h4 class="heading-3 tag-title">GUEST PROFILE * <span class="required"><small>Required</small></span></h4>
         <div class="tag">
           <h4 class="heading-3 tag-text">Adults Only</h4>
         </div>
