--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         <div class="flex-buttons">
           <div class="update-results-button">
-            update results
+            Submit Preferences
           </div>
           <div class="reset-filters-button">
             reset filters
